--- a/index.html
+++ b/index.html
@@ -3,11 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Dashboard de Oro</title>
+    <title>Gold CSV Dashboard</title>
+    <!-- Carga estática desde /public/config.js -->
+    <script src="/config.js" defer></script>
   </head>
-  <body class="bg-gray-50">
+  <body>
     <div id="root"></div>
-    <script src="./config.js"></script>
+    <!-- Mantén la línea de Vite tal como está -->
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
