--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
       content="width=device-width, initial-scale=1.0, maximum-scale=1"
     />
     <title>KleverGold</title>
-    <!-- IMPORTANTE: ruta relativa -->
-    <script src="./config.js"></script>
+    <!-- IMPORTANTE: ahora es módulo para que Vite no falle -->
+    <script type="module" src="./config.js"></script>
   </head>
   <body class="bg-zinc-50 text-zinc-900">
     <div id="root"></div>
