--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       content="width=device-width, initial-scale=1.0, maximum-scale=1"
     />
     <title>KleverGold</title>
-    <!-- IMPORTANTE: ahora es módulo para que Vite no falle -->
+    <!-- Carga de la config ANTES del bundle -->
     <script type="module" src="./config.js"></script>
   </head>
   <body class="bg-zinc-50 text-zinc-900">
