--- a/index.html
+++ b/index.html
@@ -2,15 +2,10 @@
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0, maximum-scale=1"
-    />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>KleverGold</title>
-    <!-- Carga de la config ANTES del bundle -->
-    <script type="module" src="./config.js"></script>
   </head>
-  <body class="bg-zinc-50 text-zinc-900">
+  <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
